all configuration done

--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-PORT= 8000
-MONGODB_URI= mongodb+srv://deepak:deepak123@cluster0.6wsf739.mongodb.net
-CORS_ORIGIN= *
+PORT=8000
+MONGODB_URI=mongodb+srv://deepak:deepak123@cluster0.6wsf739.mongodb.net
+CORS_ORIGIN=*
+ACCESS_TOKEN_SECRET=eyJhbGciOiJSUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6Ikpva
+ACCESS_TOKEN_EXPIRY=1d
+REFRESH_TOKEN_SECRET=G4gRG9lIiwiYWRtaW4iOnRydWUsImlhdCI6MTUxNjIzOTAyMn0.NHVaYe26MbtOYhSKkoKYdFVomg4
+REFRESH_TOKEN_EXPIRY=10d
+
+CLOUDINARY_CLOUD_NAME=deepakupload
+CLOUDINARY_API_KEY=448676374535544
+CLOUDINARY_API_SECRET=82xw4vHpKvM1rRU2S8Ide7I0KWE
